--- a/sprint1.html
+++ b/sprint1.html
@@ -2,34 +2,74 @@
 <html>
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sprint 1</title>
+    <style>
+        table{
+            border-color: black;
+            border-width: 10px;
+        }
+    </style>
 </head>
+
 <body>
-    <form id="myForm">
-        <input type="file" id="csvFile" />
-        <br />
-        <input type="submit" value="Submit" />
-    </form>
-    <br />
-    <textarea name="" id="taResult" cols="30" rows="10"></textarea>
+    <input type="file" id="inputFile" accept=".csv">
+    <pre id="csvData"></pre>
+    <textarea name="" id="taResults" cols="100" rows="10"></textarea>
+    <button id="btnView">click here to view the data</button>
     <script>
 
-        let csv = document.getElementById("input_file").files[0]
-        const rows = csv.split('\n');
-        const headers = rows[0].split(',');
-        const arrayOfObjects = rows.slice(1).map(row => {
-            const values = row.split(',');
-            const obj = {};
-            headers.forEach((header, index) => {
-                obj[header] = values[index];
-            });
-            return obj;
+        let myArray;
+        document.getElementById("btnView").addEventListener('click',viewArray)
+        // Function to handle when a CSV file is selected
+        document.getElementById('inputFile').addEventListener('change', function (event) {
+            const file = event.target.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function (e) {
+                    const csvData = e.target.result;
+                    const csvArray = csvToArray(csvData);
+                    document.getElementById('taResults').value = JSON.stringify(csvArray, null);
+                };
+                reader.readAsText(file);
+            }
         });
 
-        console.log(arrayOfObjects);
+        // Function to convert CSV data into an array
+        function csvToArray(csvData) {
+            const rows = csvData.split('\n');
+            const result = [];
+
+            rows.forEach(row => {
+                const columns = row.split(',');
+                result.push(columns);
+            });
+            myArray = result
+
+            return result;
+        }
+        console.log(myArray)
+
+        function viewArray() {
+            //create a Table Object
+            let table = document.createElement('table');
+            //iterate over every array(row) within tableArr
+            for (let row of myArray) {
+                //Insert a new row element into the table element
+                table.insertRow();
+                //Iterate over every index(cell) in each array(row)
+                for (let cell of row) {
+                    //While iterating over the index(cell)
+                    //insert a cell into the table element
+                    let newCell = table.rows[table.rows.length - 1].insertCell();
+                    //add text to the created cell element
+                    newCell.textContent = cell;
+                }
+            }
+            //append the compiled table to the DOM
+            document.body.appendChild(table);
+        }
+
+
     </script>
 </body>
 
