--- a/sprint1.html
+++ b/sprint1.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+
+    //Drop Down for specifying the display 
     <label for = "fileType">Choose File Type:</label>
     <select name"fileType" id = "fileTypes">
         <option value = "Raw"> Raw</option>
